# Mineutils

./: .gitignore  CMakeLists.txt  cmake_toolchain.cmake  desktop.ini
_special_troubles/: _special_troubles.cpp  _special_troubles.vcxproj
bugs/: bugs.cpp  bugs.sln  bugs.vcxproj  bugs.vcxproj.filters
cmake/: CMakeLists.txt  cmake_toolchain.cmake
extrahpp/cam_calibrate/: calibrate_cam.cpp  calibrate_cam.h  calibrate_cam.hpp  transform_coordinate.cpp  transform_coordinate.h  transform_coordinate.hpp
extrahpp/rv1126/: can_api.hpp  kiloCamSettings.hpp  processing.hpp  rknn_api.hpp
mineutils/: __init__.py  colorstr.py  datasetopt.py  draw.py  fileio.py  monitor.py  namecreate.py  path.py  quickshow.py  randomfix.py
mineutils/paddle/: __init__.py  dataset.py  nets.py
mineutils/pytorch/: __init__.py  dataset.py
mineutilshpp/: __cvutils__.h  __minestdutils__.h  __mineutils__.h  __stdutils__.h  bbox.hpp  colorstr.hpp  cv.hpp  cvtools.hpp  exception.hpp  file.hpp  fileio.hpp  index.hpp  judge.hpp  litetime.hpp  ncnn.hpp  ncnntools.hpp  path.hpp  points.hpp  print.hpp  sign.hpp  str.hpp  str.hpp.baiduyun.uploading.cfg
mineutilshpp17/: bbox.hpp  fileio.hpp  judge.hpp  path.hpp  print.hpp  sign.hpp
my_scripts/: HSV_threshold_selector.py  XML2yoloTXT.py  client.py  data_distribute.py  encoding_convert.py  novel_ocr.py  onnx_test.py  pull_stream.py  pullflow.py  push_stream.py  rename.py  server.py  show_position.py  txt_combine.py  video2mp4.py  video2pics.py  windingImg.py  yaml_updata.py  yoloTXT2XML.py
readme/: qt导入qmake出现“QT没有被正确安装”.txt  ~$编译opencv+ffmpeg.docx  ~WRL1876.tmp  交叉编译opencv+ffmpeg.docx
troublesCPP/: _special_troubles.sln  _special_troubles.vcxproj.filters
